--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,8 +1,37 @@
-h1
+h1,h2,h3,h4
 {
   font-family: verdana;
+  text-align: center;
 }
 
 h1 {
+  color: white;
+  font-weight: normal;
+  font-size: 50px;
+}
+
+h2 {
+  color: white;
+  font-weight: 300;
+  font-size: 42px;
+}
+
+h3 {
+  color: gray;
+  font-size: 21px;
+}
+
+h4 {
+  font-size: 16px;
+  color: aquamarine;
+}
+
+p
+{
   text-align: center;
+}
+
+div
+  {
+  background-color: black;
 }
